--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   },
   "engines": {
     "node": "5.3.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bf2344/FolkFinder.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bf2344/FolkFinder/issues"
+  },
+  "homepage": "https://github.com/bf2344/FolkFinder#readme"
 }
