--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "friendfinder",
+  "name": "folkfinder",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -7,22 +7,17 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.16.3",
-    "path": "^0.12.7"
-  },
-  "engines": {
-    "node": "5.3.0"
-  },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bf2344/FolkFinder.git"
   },
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/bf2344/FolkFinder/issues"
   },
-  "homepage": "https://github.com/bf2344/FolkFinder#readme"
+  "homepage": "https://github.com/bf2344/FolkFinder#readme",
+  "dependencies": {
+    "express": "^4.16.4"
+  }
 }
